# ocpm-collab-ppm

./: .gitignore  README.md  pyproject.toml  requirements-mapping.txt  requirements.txt
.venv-mapping/: pyvenv.cfg
data/logs/: collectivelog_artificial1_collab.jsonocel  collectivelog_artificial1_collab.sqlite  collectivelog_artificial5_collab.jsonocel  collectivelog_artificial5_collab.sqlite  collectivelog_healthcare_collab.jsonocel  collectivelog_healthcare_collab.sqlite  collectivelog_real4_collab.jsonocel  collectivelog_real4_collab.sqlite
results/: rq2_fidelity.csv  rq3_extensions_example.csv  rq3_results.csv  rq3_results_full.csv  rq4_expressiveness.csv  rq4_structure.csv
src/mapping/: README.md  collab_xes_to_ocel.py
src/mapping/aux/: collab.xesext  printOCEL.py
src/ocpm_collab_ppm.egg-info/: PKG-INFO  SOURCES.txt
src/ocpm_eval/: README.md  __init__.py  config.py  features_ocpa.py  io_ocel.py  models.py  requirements.txt  rq2_fidelity.py  rq3_extensions_example.py  rq3_pipeline.py  rq4_structure.py  run_evaluation.py
src/ocpm_tasks/: README.md  __init__.py  adapters.py  catalog.py  fidelity.py  labels.py  model.py  schema.py
