[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ocpm-collab-ppm"
version = "0.1.0"
description = "Object-centric predictive monitoring of collaborative processes (tasks library + evaluation)."
requires-python = ">=3.9"
# Runtime tools (OCPA, pm4py) are installed separately; see requirements.txt.
dependencies = ["scikit-learn", "pandas", "numpy"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
